# Celma

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  celma.doxy  codecov.yml  filter_logik.txt  makefile  sonar-project.properties  todo.txt
src/: CMakeLists.txt
src/celma/: CMakeLists.txt  prog_args.hpp  type_name.hpp
src/celma/appl/: arg_string_2_array.hpp  generation_file_creator.hpp  generation_file_definition.hpp  project_path.hpp  project_root.hpp
src/celma/appl/detail/: date_time.hpp  env.hpp  fill_char.hpp  width.hpp
src/celma/chrono/: duration2string.hpp  periodic_repeat.hpp
src/celma/common/: adjust.hpp  any_type_base.hpp  arg_string_2_array.hpp  bitset_iterator.hpp  bounds_range.hpp  celma_exception.hpp  check_assign.hpp  clear_container.hpp  comparable.hpp  constexpr_string_concat.hpp  constexpr_string_from.hpp  contains.hpp  counting_iterator.hpp  current_total.hpp  custom_property.hpp  dynamic_bitset.hpp  enum_array.hpp  enum_flags.hpp  exception_base.hpp  execute_statistic.hpp  extract_func_name.hpp  extract_funcname.hpp  file_info.hpp  file_operations.hpp  filter.hpp  find_sequence.hpp  first_pass.hpp  fixed_string.hpp  has_intersection.hpp  lazy_ptr.hpp  length_type.hpp  make_pooled_ptr.hpp  managed_thread.hpp  manipulator.hpp  merge_sorted_cont.hpp  micro_timer.hpp  multi_setter.hpp  multiline_string_compare.hpp  no_lock.hpp  object_counter.hpp  (+35 more)
src/celma/common/detail/: bitset_iterator_base.hpp  constexpr_string_concat.hpp  constexpr_string_from.hpp  dynamic_bitset_iterator.hpp  dynamic_singleton_creator.hpp  file_funcs_base.hpp  file_funcs_os.hpp  filter.hpp  filter_policy.hpp  filters.hpp  fixed_string_iterator.hpp  fixed_string_reverse_iterator.hpp  forward_bitset_iterator.hpp  iostream_type_name.hpp  line_handler_call_points.hpp  line_handler_policy.hpp  name_path_remain.hpp  parse_filter_combination.hpp  pod_type_name.hpp  property_cont.hpp  property_entry.hpp  property_factory.hpp  property_iterator.hpp  property_link.hpp  property_map.hpp  property_map_t.hpp  property_value.hpp  provide_simple_type_name.hpp  provide_template_type_name.hpp  random.hpp  random_range_iter.hpp  range_expression.hpp  range_generator.hpp  range_string_iterator.hpp  reverse_bitset_iterator.hpp  singleton.hpp  smart_ptr_type_name.hpp  static_singleton_creator.hpp  stl_type_name.hpp  stream_line_iterator.hpp  (+10 more)
src/celma/container/: bitset_iterator.hpp  clear_container.hpp  counting_iterator.hpp  dynamic_bitset.hpp  properties.hpp
src/celma/container/detail/: bitset_iterator_base.hpp  dynamic_bitset_iterator.hpp  forward_bitset_iterator.hpp  property_cont.hpp  property_entry.hpp  property_factory.hpp  property_iterator.hpp  property_link.hpp  property_map_t.hpp  property_value.hpp  reverse_bitset_iterator.hpp
src/celma/containers/: balanced_binary_tree.hpp  binary_tree.hpp  btree.hpp
src/celma/containers/detail/: balanced_binary_tree_node.hpp  binary_tree_node.hpp  tree_iterator.hpp
src/celma/detail/: celma_version.hpp.in  pod_type_name.hpp  stl_type_name.hpp  type_name.hpp
src/celma/format/: ascii_table.hpp  auto_sprintf.hpp  grouped_double2string.hpp  grouped_int2str.hpp  grouped_int2string.hpp  indent_handler.hpp  int2str.hpp  int2string.hpp  range_value_string.hpp  size_handling.hpp  string_to.hpp  text_block.hpp  text_block_fwd.hpp  to_string.hpp  unit_prefixes.hpp  xml_writer.hpp
src/celma/format/detail/: grouped_int16_to_string.hpp  grouped_int32_to_string.hpp  grouped_int64_to_string.hpp  grouped_int8_to_string.hpp  int16_str_length.hpp  int16_to_string.hpp  int32_str_length.hpp  int32_to_string.hpp  int64_str_length.hpp  int64_to_string.hpp  int8_str_length.hpp  int8_to_string.hpp  int_str_length.hpp
src/celma/indirect_access/: indirect_access.hpp  indirect_access_macros.hpp
src/celma/indirect_access/detail/: base.hpp  field.hpp  i_field.hpp  i_indirect_access_field.hpp  indirect_access_base.hpp  indirect_access_field.hpp  indirect_access_macros.hpp  macros.hpp
src/celma/log/: log_attributes.hpp  log_macros.hpp  logging.hpp
src/celma/log/detail/: add_log_standard_args.hpp  custom_property.hpp  duplicate_policy.hpp  duplicate_policy_exception.hpp  duplicate_policy_factory.hpp  duplicate_policy_ignore.hpp  duplicate_policy_replace.hpp  duplicate_policy_throw.hpp  format_stream_default.hpp  helper_function.hpp  i_duplicate_policy.hpp  i_format_base.hpp  i_format_stream.hpp  i_log_dest.hpp  i_log_filter.hpp  log.hpp  log_attributes.hpp  log_attributes_container.hpp  log_data.hpp  log_defs.hpp  log_dest_data.hpp  log_dest_file_generations.hpp  log_dest_stream.hpp  log_filter.hpp  log_filter_classes.hpp  log_filter_level.hpp  log_filter_max_level.hpp  log_filter_min_level.hpp  log_msg.hpp  log_msg_property.hpp  log_printf.hpp  log_scoped_attribute.hpp  no_generation_policy.hpp  stream_log.hpp
src/celma/log/filename/: builder.hpp  creator.hpp  definition.hpp
src/celma/log/files/: counted.hpp  factory.hpp  handler.hpp  max_size.hpp  policy_base.hpp  simple.hpp  timestamped.hpp
src/celma/log/filter/: filters.hpp
src/celma/log/formatting/: creator.hpp  definition.hpp  format.hpp
src/celma/prog_args/: add_standard_argument.hpp  argument_error.hpp  destination.hpp  eval_argument_string.hpp  groups.hpp  handler.hpp  handler_values.hpp  i_usage_text.hpp  level_counter.hpp  standard_arguments_group.hpp  summary_options.hpp  triple_logic.hpp  value_handler.hpp
src/celma/prog_args/detail/: arg_handler_callable.hpp  arg_list_element.hpp  arg_list_iterator.hpp  arg_list_parser.hpp  argument_container.hpp  argument_desc.hpp  argument_key.hpp  argument_value.hpp  cardinality_exact.hpp  cardinality_max.hpp  cardinality_range.hpp  check_file_modification.hpp  check_file_size.hpp  check_file_suffix.hpp  check_function.hpp  check_is_absolute_path.hpp  check_is_directory.hpp  check_is_file.hpp  check_lower.hpp  (+42 more)
src/celma/reflection/: reflection_macros.hpp
src/celma/test/: CMakeLists.txt  check_for.hpp  check_return.hpp  global_fixture_access.hpp  measure.hpp  multiline_string_compare.hpp  test_handling.hpp  test_prog_arguments.hpp  test_type_name.cpp
(+27 files in other folders)
